added btnStyle class

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                         placeholder="Enter your message"></textarea>
                 </div>
                 <div class="btn" style="display: flex; align-items: center; justify-content: center;">
-                    <a href="index.html" class="hero-btn">Submit</a>
+                    <a href="index.html" class="btnStyle">Submit</a>
                     <!-- <button type="submit"><span></span>Reset</button> -->
                 </div>
             </form>
